[project]

name = "ocrdesktop"
version = "4.0.0"
description = "An accessibility tool for operating the curent window using OCR"
authors = [
    { name = "Chrys", email = "chrys@linux-a11y.org" }
]
license="GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyGObject>=3.56.1, <4",
    "pyatspi@git+https://gitlab.gnome.org/GNOME/pyatspi2.git@2.58.1",
    "pytesseract>=0.3.13, <0.4",
    "pillow>=12.1.1, <13",
    "scipy>=1.17.1, <2",
    "webcolors>=25.10.0, <26",
    "pdf2image>=1.17.0, <2",
]

[project.urls]

Homepage = "https://github.com/chrys87/ocrdesktop"
Repository = "https://github.com/chrys87/ocrdesktop"

[project.scripts]

ocrdesktop = "ocrdesktop.main:main"

[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]

allow-direct-references=true

